--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first HTML Page</title>
 </head>
 <body>
-    
+    <h1>Name - Bishesh Singh Chauhan <br>
+        Father's Name - Santosh Kumar Singh <br>
+        Mother's Name - Manju Singh
+        </h1>
+        <h2>Branch - Computer Science Engineering <br>
+            Section - Cse 16</h2>
+            <p>Local Address - 68-H - Narbada Beej Bhandar ,<br>
+                Sankar Bazar Karwi ,<br>
+                Chitrakoot Uttar Pradesh, <br>
+                Pin Code - 210205 </p>
 </body>
 </html>
