--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>My first HTML Page</title>
 </head>
 <body>
-    <h1>Name - Bishesh Singh Chauhan <br>
+    <h1 style="color:rgb(255, 149, 0); text-align:center;">Name - Bishesh Singh Chauhan <br>
         Father's Name - Santosh Kumar Singh <br>
         Mother's Name - Manju Singh
         </h1>
-        <h2>Branch - Computer Science Engineering <br>
+        <h2 style="color:rgb(255, 204, 0); text-align:center;">Branch - Computer Science Engineering <br>
             Section - Cse 16</h2>
-            <p>Local Address - 68-H - Narbada Beej Bhandar ,<br>
+            <p style="color:rgb(204, 0, 255); text-align:center;">Local Address - 68-H - Narbada Beej Bhandar ,<br>
                 Sankar Bazar Karwi ,<br>
                 Chitrakoot Uttar Pradesh, <br>
                 Pin Code - 210205 </p>
